@@ -1,5 +1,9 @@
 2021-03-21  Mark Galassi  <mark@galassi.org>
 
+	* plot_ga_output.py (load_LEM, present_metadata): metadata is now
+	in there, but the overall window size does not currently hold it
+	in.
+
 	* plot_ga_output.py: started moving toward a gridspec layout so I
 	can add metadata information.
 
